--- a/Changes
+++ b/Changes
@@ -1,4 +1,11 @@
 Revision history for Perl extension ExtUtils::ModuleMaker.
+0.41    September 19, 2005
+    - Corrected error in lib/ExtUtils/ModuleMaker/Utility.pm
+      _get_home_directory():  double backslashes messed up tests on Windows.
+
+0.40   September 18, 2005
+    - Extensive refactoring; additional documentation; new default values
+      added, particularly with regard to naming of tests.
 
 0.39   September 5, 2005
     - v0.38 was reported by two beta-testers to fail in tests depending on
