--- a/README
+++ b/README
@@ -1,14 +1,14 @@
 ExtUtils::ModuleMaker - Better than h2xs for creating modules
 
-This document refers to version 0.39_13 of ExtUtils::ModuleMaker.  
-his version was released September 17, 2005.
+This document refers to version 0.41 of ExtUtils::ModuleMaker.  
+his version was released September 19, 2005.
 
 To install this module on your system, place the tarball archive file in a 
 temporary directory and call the following:
 
-% gunzip ExtUtils-ModuleMaker-0.39_13.tar.gz
-% tar xf ExtUtils-ModuleMaker-0.39_13.tar
-% cd ExtUtils-ModuleMaker-0.39_13
+% gunzip ExtUtils-ModuleMaker-0.41.tar.gz
+% tar xf ExtUtils-ModuleMaker-0.41.tar
+% cd ExtUtils-ModuleMaker-0.41
 % perl Makefile.PL
 % make
 % make test
