--- a/README
+++ b/README
@@ -1,14 +1,14 @@
 ExtUtils::ModuleMaker - Better than h2xs for creating modules
 
-This document refers to version 0.41_02 of ExtUtils::ModuleMaker.  
-his version was released September 26, 2005.
+This document refers to version 0.42 of ExtUtils::ModuleMaker.  
+his version was released September 28, 2005.
 
 To install this module on your system, place the tarball archive file in a 
 temporary directory and call the following:
 
-% gunzip ExtUtils-ModuleMaker-0.41_02.tar.gz
-% tar xf ExtUtils-ModuleMaker-0.41_02.tar
-% cd ExtUtils-ModuleMaker-0.41_02
+% gunzip ExtUtils-ModuleMaker-0.42.tar.gz
+% tar xf ExtUtils-ModuleMaker-0.42.tar
+% cd ExtUtils-ModuleMaker-0.42
 % perl Makefile.PL
 % make
 % make test
