--- a/README
+++ b/README
@@ -1,14 +1,14 @@
 ExtUtils::ModuleMaker - Better than h2xs for creating modules
 
-This document refers to version 0.43_04 of ExtUtils::ModuleMaker.  
-his version was released November 13, 2005.
+This document refers to version 0.44 of ExtUtils::ModuleMaker.  
+his version was released December 24, 2005.
 
 To install this module on your system, place the tarball archive file in a 
 temporary directory and call the following:
 
-% gunzip ExtUtils-ModuleMaker-0.43_04.tar.gz
-% tar xf ExtUtils-ModuleMaker-0.43_04.tar
-% cd ExtUtils-ModuleMaker-0.43_04
+% gunzip ExtUtils-ModuleMaker-0.44.tar.gz
+% tar xf ExtUtils-ModuleMaker-0.44.tar
+% cd ExtUtils-ModuleMaker-0.44
 % perl Makefile.PL
 % make
 % make test
