In response to bug report by Gabriel Fortuna, made correction in t/01_ini.t. Upped version number to 0.45 and date to April 5, 2006.  Uploaded to CPAN.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension ExtUtils::ModuleMaker.
 
+0.45    April 5, 2006
+
+In response to bug report from Gabriel Fortuna, corrected bug in t/01_ini.t.
+
 0.44    December 24, 2005
 
 Corrected one typo in ExtUtils/ModuleMaker.pm:  '\' before @ in e-mail 
