--- a/Changes
+++ b/Changes
@@ -1,6 +1,17 @@
 Revision history for Perl extension ExtUtils::ModuleMaker.
 
-0.48    March 26, 2006
+0.49    March 27, 2007
+
+Responded to bug report http://rt.cpan.org/Ticket/Display.html?id=25830 that
+when either INCLUDE_POD_COVERAGE_TEST or INCLUDE_POD_TEST is used on Windows,
+using File::Spec::catfile to generate filenames for MANIFEST results in
+Windows-style path separators (\) appearing in MANIFEST.  Though most of the
+time you want to use catfile to generate system-specific paths, in this case
+you do not because ExtUtils::Manifest uses only Unix-style path separators
+(/).  Fixed.
+
+Responded to bug report 
+0.48    March 26, 2007
 
 Responded to bug report http://rt.cpan.org/Ticket/Display.html?id=25830 of
 warnings being thrown during 'make test' in a situation where requestor
