--- a/README
+++ b/README
@@ -1,35 +1,35 @@
 ExtUtils::ModuleMaker - Better than h2xs for creating modules
 
-This document refers to version 0.51 of ExtUtils::ModuleMaker.  
-This version was released February 9, 2008.
+This document refers to version 0.52 of ExtUtils::ModuleMaker.
+This version was released July 04 2014.
 
-To install this module on your system, place the tarball archive file in a 
+To install this module on your system, place the tarball archive file in a
 temporary directory and call the following:
 
-% gunzip ExtUtils-ModuleMaker-0.51.tar.gz
-% tar xf ExtUtils-ModuleMaker-0.51.tar
-% cd ExtUtils-ModuleMaker-0.51
+% gunzip ExtUtils-ModuleMaker-0.52.tar.gz
+% tar xf ExtUtils-ModuleMaker-0.52.tar
+% cd ExtUtils-ModuleMaker-0.52
 % perl Makefile.PL
 % make
 % make test
 % make install
 
-If during installation you wish to view more information on test results, 
+If during installation you wish to view more information on test results,
 substitute the following for the sixth line in the sequence of commands
 above:
 
 % make test TEST=VERBOSE
 
-If you are installing this module over any earlier version, you may 
-substitute the following for the last line in the sequence of commands 
+If you are installing this module over any earlier version, you may
+substitute the following for the last line in the sequence of commands
 above:
 
 % make install UNINST=1
 
-If you are installing this module on a Win32 system with 'nmake', 
+If you are installing this module on a Win32 system with 'nmake',
 substitute 'nmake' for 'make' in the sequence of commands above.
 
-In sending e-mail to the maintainer, please put "ExtUtils::ModuleMaker", 
+In sending e-mail to the maintainer, please put "ExtUtils::ModuleMaker",
 "ExtUtils-ModuleMaker" or "modulemaker" in the subject line.
 
 Original author:  R. Geoffrey Avery
@@ -41,8 +41,10 @@ Maintainer since version 0.33: James E. Keenan
 CPAN ID:  JKEENAN
 jkeenan@cpan.org
 
+Development repository:  https://github.com/jkeenan/extutils-modulemaker
+
 Copyright (c) 2001-2002 R. Geoffrey Avery.
-Revisions from v0.33 forward (c) 2005 James E. Keenan.  All rights reserved.
+Revisions from v0.33 forward (c) 2005-2014 James E. Keenan.  All rights reserved.
 This program is free software; you can redistribute
 it and/or modify it under the same terms as Perl itself.
 
