--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl extension ExtUtils::ModuleMaker.
 
+0.61    May 14, 2018
+
+Update content of MANIFEST.SKIP (when INCLUDE_MANIFEST_SKIP is set to true
+value) to reflect contemporary best practices (e.g., account for Travis and
+AppVeyor configuration files).
+
 0.60    May 07, 2018
 
 No functional changes.  Correct syntax in two test files for better results on
@@ -33,7 +39,7 @@ from ExtUtils::ModuleMaker::Auxiliary of many subroutines no longer used in
 test suite.  Extensive consolidation of files within the test suite to improve
 maintainability and test suite running time.
 
-Provided configuration files for Travis and Appveyor.
+Provided configuration files for Travis and AppVeyor.
 
 0.56    January 30, 2017
 
